--- a/client/src/pages/Main/Welcome/ProjectDetails/ProjectDetails.module.scss
+++ b/client/src/pages/Main/Welcome/ProjectDetails/ProjectDetails.module.scss
@@ -1,8 +1,7 @@
 @import "~/variables";
 
 .project-details {
-  padding: 10px 15px 20px 15px;
-  background-color: #3C3C3C;
+  padding: 10px 15px 30px 15px;
   color: #fff;
 }
 
